<resources>
    <string name="app_name">RickAndMorty</string>

    <!-- activity_main -->
    <string name="origin">Origin</string>
    <string name="species">Species</string>
    <string name="alive">Alive</string>
    <!-- menu_drawer_layout -->
    <string name="characters">Characters</string>
    <string name="Episodes">Episodes</string>
    <string name="all_characters">All Characters</string>
    <string name="all_episodes">All Episodes</string>
    <string name="search_characters">Search Characters</string>
</resources>